crates/core/tests/snapshots/format_snapshots__ambiguous.snap
---
source: crates/core/tests/format_snapshots.rs
expression: text
---
AMBIGUOUS_TARGET: @SNAP:eN matches 11 live elements; re-snapshot
next: pick a ref with a firmer native_id, walk --json bounds, or coordinate-tap from --json, then retry
