crates/core/tests/snapshots/format_snapshots__android_status_render.snap
---
source: crates/core/tests/format_snapshots.rs
expression: text
---
app=com.google.android.deskclock device="sdk_gphone64_arm64" os=17 snapshot=@SNAP elapsed_ms=N
