crates/core/tests/snapshots/format_snapshots__bad_request.snap
---
source: crates/core/tests/format_snapshots.rs
expression: text
---
BAD_REQUEST: ref required
next: fix the request; do not retry unchanged
