crates/core/tests/snapshots/format_snapshots__calendar_header_line_matches_live_format.snap
---
source: crates/core/tests/format_snapshots.rs
expression: first
---
app=com.apple.mobilecal snapshot=@SNAP refs=127 settled=true reads=3 elapsed_ms=N
