crates/core/tests/snapshots/format_snapshots__calendar_max_depth_1.snap
---
source: crates/core/tests/format_snapshots.rs
expression: after
---
app=com.apple.mobilecal snapshot=@SNAP refs=127 settled=true reads=3 elapsed_ms=N complete=false
@SNAP:eN application "Calendar" at=0,0 size=440x956
