crates/core/tests/snapshots/format_snapshots__screenshot_line.snap
---
source: crates/core/tests/format_snapshots.rs
expression: line
---
screenshot=/tmp/shot.png bytes=1536
