crates/core/tests/snapshots/format_snapshots__terminate_line.snap
---
source: crates/core/tests/format_snapshots.rs
expression: text
---
terminated=com.apple.mobilecal app=com.apple.springboard elapsed_ms=N
