crates/core/tests/snapshots/format_snapshots__unauthorized.snap
---
source: crates/core/tests/format_snapshots.rs
expression: text
---
UNAUTHORIZED: Authorization: Bearer <AGENT_MOBILE_TOKEN> required
next: fix AGENT_MOBILE_TOKEN; do not retry unchanged
