crates/core/tests/snapshots/format_snapshots__unknown_command.snap
---
source: crates/core/tests/format_snapshots.rs
expression: text
---
UNKNOWN_COMMAND: bogus
next: fix the client; do not retry
