crates/core/tests/snapshots/format_snapshots__version_mismatch_refusal.snap
---
source: crates/core/tests/format_snapshots.rs
expression: text
---
BAD_REQUEST: X-Agent-Mobile-Version must be 1
next: fix the request; do not retry unchanged
